tui/tests/snapshots/prompt__long_question_and_option_labels_wrap_and_rerender_cleanly.snap
---
source: tui/tests/prompt.rs
expression: snapshot
---
Select your preferred daily commute opti
on from the list below, weighing the cos
t, the travel time, and the environmenta
l impact of each
  ○ [e] an electric bicycle charged at h
ome or your workplace overnight
  ● sharing a ride with neighbors commut
ing along the same route each morning
  ○ [r] a scooter rented from a dock on 
the street corner near the station

  ↑/↓ navigate  Enter select  A-Z jump  
Esc cancel
