tui/tests/snapshots/prompt__multiline_question_redisplays_from_column_zero_on_navigation.snap
---
source: tui/tests/prompt.rs
expression: session.screen().contents()
---
Pick an option
(you can change it)
  ○ [b] bike
  ○ [m] metro
  ● tram

  ↑/↓ navigate  Enter select  A-Z jump  Esc cancel
