tui/tests/snapshots/prompt__resize_during_interaction_keeps_prompt_usable.snap
---
source: tui/tests/prompt.rs
expression: "String::from_utf8_lossy(&bytes)"
---
Pick an option
  ● bike
  ○ [m] metro
  ○ [t] tram

  ↑/↓ navigate  Enter select  A-Z jump  Esc cancel
Pick an option (bike) ✓
confirmed: Bike
