tui/tests/snapshots/prompt__small_terminal_scrolls_options_to_stay_reachable.snap
---
source: tui/tests/prompt.rs
expression: "String::from_utf8_lossy(&bytes)"
---
Pick an option
  ● bike

  ↑/↓ navigate  Enter select  A-Z jump  Esc cancel
Pick an option
  ● carpool

  ↑/↓ navigate  Enter select  A-Z jump  Esc cancel
Pick an option
  ● ev scooter

  ↑/↓ navigate  Enter select  A-Z jump  Esc cancel
Pick an option (ev scooter) ✓
confirmed: EVScooter
