tui/tests/snapshots/prompt__unicode_disabled_renders_ascii_markers.snap
---
source: tui/tests/prompt.rs
expression: "String::from_utf8_lossy(&bytes)"
---
Pick an option
  * bike
    [m] metro
    [t] tram

  ↑/↓ navigate  Enter select  A-Z jump  Esc cancel
Pick an option (bike) done
confirmed: Bike
